--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -19,18 +19,18 @@
 			<div class="footer__col col-span-4 lg:col-span-10 xl:col-span-5">
 				<p class="font-headings animate text-lg leading-8 text-neutral-500">
 					I'm remote-friendly and always open to new opportunities. Feel free to email me at
-					<a class="text-neutral-800 dark:text-white" href="mailto:milo@studio.com">
-						milo@studio.com
+					<a class="text-neutral-800 dark:text-white" href="mailto:scottgaletto@gmail.com">
+						scottgaletto@gmail.com
 					</a>
-					or call me at
+					<!-- or call me at
 					<a class="text-neutral-800 dark:text-white" href="tel:+13235550198">
 						+1 (323) 555-0198</a
 					>. You can also find me on Instagram at <a
 						class="text-neutral-800 dark:text-white"
 						href="#"
 					>
-						@milo.design
-					</a> or view my <a class="text-neutral-800 dark:text-white" href="#">resume</a> for more details.
+						@scottgaletto -->
+					<!-- </a> or view my <a class="text-neutral-800 dark:text-white" href="#">resume</a> for more details. -->
 				</p>
 			</div>
 		</div>
