--- a/src/components/ui/Slider.astro
+++ b/src/components/ui/Slider.astro
@@ -74,7 +74,7 @@ const {
 
 		swiperScript.onload = () => {
 			const slidesID = id
-			const swiperDelay = delay || 5000
+			const swiperDelay = 20000 || 5000
 			const swiperSlidesPerView = slidesPerView
 			const swiperEffect = effect
 			const swiperSpaceBetween = spaceBetween
