--- a/src/pages/case-studies-design/[...page].astro
+++ b/src/pages/case-studies-design/[...page].astro
@@ -28,9 +28,9 @@ const { page } = Astro.props as any
 // Content
 // - SEO
 const SEO = {
-	title: 'Case Studies – Showcasing Work with the Milo Astro Theme',
+	title: 'Case Studies – Showcasing Design and Development Work',
 	description:
-		'Explore detailed case studies and projects built using the Milo Astro theme. Discover how you can present your work, achievements, and process in a modern, fast, and accessible format.'
+		''
 }
 
 // Function to sort case studies by date
@@ -47,10 +47,7 @@ const sortedCaseStudies = page.data.sort((a: any, b: any) => {
 				<div class="animate">
 					<h1 class="mt-0">Featured Work</h1>
 					<p>
-						Throughout my career, I have had the privilege of working on a wide range of projects,
-						from designing and developing websites for small businesses and startups, to creating
-						complex web applications for large enterprises and non-profit organizations.
-					</p>
+						Throughout my career, I’ve had the opportunity to work across a wide spectrum of digital projects—bringing both design sensibility and front-end expertise to the table. I’ve helped scrappy startups find their voice online, crafted smart, scalable sites for small businesses, and tackled complex web applications for enterprise clients and nonprofits alike. Whether it’s building sleek UI from scratch, optimizing UX for real humans, or translating big ideas into clean, responsive code, I thrive at the intersection of creativity and functionality. My work isn’t just about launching pages—it’s about building digital experiences that connect, convert, and leave a lasting impression.
 				</div>
 			</Col>
 		</Row>
