--- a/src/pages/index-image.astro
+++ b/src/pages/index-image.astro
@@ -60,7 +60,7 @@ const imageSource = '/hero/hero-image-primary.png'
 
 				<div class="animate relative z-10">
 					<h1 class="max-w-3xl font-normal">
-						Hi, <br />I’m Milo <br />& I design.
+						Hi, <br />I’m Scott <br />& I design.
 					</h1>
 
 					<ul class="font-headings flex flex-wrap gap-6 text-lg italic lg:gap-9">
@@ -200,8 +200,7 @@ const imageSource = '/hero/hero-image-primary.png'
 			</Col>
 			<Col span="5" spanMobile="4">
 				<p class="m-0 w-full">
-					From SaaS landing pages to eCommerce stores and interactive web apps. Each one reflects my
-					focus on clean design, thoughtful UX, and modern front-end development.
+					I design and build engaging digital experiences that blend thoughtful UX, clean UI, and front-end code. From mobile prototypes to interactive campaigns, my work focuses on usability, creativity, and bringing ideas to life with polish and purpose. front-end development.
 				</p>
 			</Col>
 			<Col span="5" spanMobile="4" classes="lg:self-end lg:justify-self-end">
