refactor: update image paths for Sauza case study and revise homepage copy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -174,7 +174,7 @@ const SEO = {
 			</Col>
 			<Col span="5" spanMobile="4">
 				<p class="m-0 w-full">
-					From mobile prototypes to interactive campaigns, my work focuses on usability, creativity, and bringing ideas to life with polish and purpose.
+					Between mobile prototypes, interactive campaigns and video, my work focuses on usability, creativity, and bringing ideas to life with polish and purpose.
 				</p>
 			</Col>
 			<Col span="5" spanMobile="4" classes="lg:self-end lg:justify-self-end">
