chore: cleanup case study images and update content copy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -105,10 +105,10 @@ const SEO = {
 			</Col>
 			<Col span="10" spanMobile="4" classes="lg:columns-2 gap-9">
 				<p>
-					I’m a designer-slash-front-end dev who’s all about clean visuals, intuitive UX, and digital experiences that actually make sense. With a background that spans agencies, startups, and everything in between, I’ve spent the last 20+ years making websites and products that don’t just look good — they feel good to use. I obsess over the details: layout, flow, micro-interactions, accessibility. Basically, if it’s on screen, I want it to work hard and look effortless.
+					I’m a designer and front-end developer obsessed with clean visuals, intuitive UX, and experiences that actually make sense. Over the last 20+ years—spanning agencies, startups, and enterprise—I’ve crafted websites and products that feel as good to use as they do to look at. My work is driven by the details: layout, flow, micro-interactions, and accessibility.
 				</p>
 				<p>
-					When I’m not designing or fine-tuning UI, you’ll probably find me diving into a new app idea, experimenting with the latest AI tools, or tweaking my portfolio for the hundredth time (because, yes, it’s never done). I’m always chasing that balance between creativity and clarity — whether it’s through digital design, front-end code, or late-night concept sketching. I believe in building with empathy, learning as you go, and using tech to make things a little smarter, a little weirder, and a lot more human.
+					When I’m not refining UI or mapping user journeys, I’m experimenting with new app concepts, testing emerging AI tools, or reworking my portfolio for the hundredth time. I’m always chasing that sweet spot between creativity and clarity—whether it’s designing interfaces, coding responsive layouts, or building something delightfully unexpected.
 				</p>
 			</Col>
 		</Row>
@@ -149,13 +149,12 @@ const SEO = {
 					{ listItem: 'Performance Optimization' },
 					{ listItem: 'Figma & FigJam' },
 					{ listItem:	'Adobe Creative Suite'},
-					{ listItem: 'Framer' },
 					{ listItem: 'Webflow' },
 					{ listItem: 'Astro / React / Tailwind CSS' },
+					{ listItem: 'Wordpress' },
+					{ listItem: 'Drupal' },
 					{ listItem: 'Asana' },
 					{ listItem: 'Jira' },
-					{ listItem: 'Trello' },
-					{ listItem: 'Notion' },
 					{ listItem: 'Slack' }
 				]}
 				classes="ml-4"
